--- a/AgrassarStats/package.json
+++ b/AgrassarStats/package.json
@@ -5,5 +5,15 @@
   "main": "server.js",
   "author": {
     "name": ""
+  },
+  "dependencies": {
+    "express": "~4.16.3",
+    "path": "~0.12.7",
+    "react": "~16.4.2",
+    "react-dom": "~16.4.2",
+    "ts-loader": "~4.5.0",
+    "typescript": "~2.9.2",
+    "webpack": "~4.17.1",
+    "webpack-cli": "~2.1.5"
   }
 }
